--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   backend:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
@@ -16,7 +16,7 @@ services:
       MARIADB_ROOT_PASSWORD: admin
 
   configurator:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
@@ -45,7 +45,7 @@ services:
       - logs:/home/frappe/frappe-bench/logs
 
   create-site:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
@@ -75,7 +75,7 @@ services:
           fi
         done;
         echo "sites/common_site_config.json found";
-        bench new-site --mariadb-user-host-login-scope='%' --admin-password=admin --db-root-username=root --db-root-password=admin --install-app erpnext --set-default frontend;
+        bench new-site --mariadb-user-host-login-scope='%' --admin-password=admin --db-root-username=root --db-root-password=admin --install-app erpnext --install-app hrms --install-app crm --install-app gameplan --install-app Raven --install-app education --install-app insights --install-app india-compliance --install-app helpdesk --install-app builder --install-app drive --install-app print_designer --install-app wiki --set-default frontend;
 
   db:
     image: mariadb:10.6
@@ -100,7 +100,7 @@ services:
       - db-data:/var/lib/mysql
 
   frontend:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     depends_on:
@@ -126,7 +126,7 @@ services:
       - "8080:8080"
 
   queue-long:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
@@ -142,7 +142,7 @@ services:
       - logs:/home/frappe/frappe-bench/logs
 
   queue-short:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
@@ -176,7 +176,7 @@ services:
         condition: on-failure
 
   scheduler:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
@@ -190,7 +190,7 @@ services:
       - logs:/home/frappe/frappe-bench/logs
 
   websocket:
-    image: frappe/erpnext:v15.52.0
+    image: devopsdynamics/erpnext-custom:15.53.0
     networks:
       - frappe_network
     deploy:
